Homepage_helm/template_out.yaml
---
# Source: homepage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    helm.sh/chart: homepage-4.12.1
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/version: "v1.13.1"
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
  ipFamilyPolicy: PreferDualStack
---
# Source: homepage/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    helm.sh/chart: homepage-4.12.1
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/version: "v1.13.1"
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
      app.kubernetes.io/instance: homepage
  template:
    metadata:
      labels:
        helm.sh/chart: homepage-4.12.1
        app.kubernetes.io/name: homepage
        app.kubernetes.io/instance: homepage
        app.kubernetes.io/version: "v1.13.1"
        app.kubernetes.io/part-of: homepage
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: homepage
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: homepage
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/gethomepage/homepage:v1.13.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: logs
              mountPath: /app/config/logs
      volumes:
        - name: config
          emptyDir: {}
        - name: logs
          emptyDir: {}
---
# Source: homepage/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  labels:
    helm.sh/chart: homepage-4.12.1
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/version: "v1.13.1"
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: gw-internal
      namespace: gateway
  hostnames:
    - homepage.huntrrose.local
  rules:
    - backendRefs:
        - name: homepage
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
# Source: homepage/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "homepage-test-connection"
  namespace: homepage
  labels:
    helm.sh/chart: homepage-4.12.1
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/version: "v1.13.1"
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['homepage:80']
  restartPolicy: Never
